2006-10-27  Roberto Bucher <roberto.bucher@supsi.ch>

	* /rtai-lab/scilab/devices/*.c: function getstr changed to
	par_getstr (conflict with a Scilab function). Thanks to
	Simone Mannori.

2006-10-26  Roberto Bucher <roberto.bucher@supsi.ch>

	* /rtai-lab/scilab/macros/RTAI/rtai4_comedi_datain.sci: Corrected
	bug by passing block parameters. Thanks to Simone Mannori.

2006-10-20  Roberto Bucher <roberto.bucher@supsi.ch>

	* /rtai-lab/scilab/rtmain.c: Added a hiddean feature to measure the
	task duration using a compiler flag "-DTASKPERIOD=<fifo nr>.

2006-10-20  Roberto Bucher <roberto.bucher@supsi.ch>

	* /rtai-lab/matlab/rtmain.c: Added a hiddean feature to measure the
	task duration using a compiler flag "-DTASKPERIOD=<fifo nr>.

2006-10-03  Roberto Bucher <roberto.bucher@supsi.ch>

	* /rtai-lab/scilab/macros/RTAI/RTAI-Lib.cosf: Corrected the absolute
	  path contained in the palette.

2006-10-03  Roberto Bucher <roberto.bucher@supsi.ch>

	* /rtai-lab/scilab/rtmain.c: Better handling of the Ctrl-C signals 
	  on certain systems.

2006-09-28  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* /base/ipc/sem.c: check broadcasted task handle to keep the lazy
	  atomicity safe.

2006-09-27  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* /base/ipc/fifos.c: fixed atomic rtf_get_if, it called the internal
	  support for rtf_put_if.
	* /base/include/rtai_posix.h: better behaviour when condvars are
	  cancelled asynchronously.

2006-09-21  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* /base/include/rtai_posix.h: get rid of redundant (with reference to 
	  pthread.h) declarations disturbing recent gccs.

2006-09-18 RTAI-3.4 released.

2006-09-14  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* /base/tasklets/tasklets.c: update the actual time by reading the
	  timer, postpone actual priority assignment when it is sure it will
	  be used (avoids spurious preemptions), do not let the idle sleep 
	  priority to go below the (user assignable) default threshold.
