@@ -22,10 +22,12 @@
 
 #include <linux/version.h>
 
-#define TSKEXT0  (HAL_ROOT_NPTDKEYS - 3)
-#define TSKEXT1  (HAL_ROOT_NPTDKEYS - 2)
-#define TSKEXT2  (HAL_ROOT_NPTDKEYS - 1)
-#define TSKEXT3  (HAL_ROOT_NPTDKEYS - 0)
+#define TSKEXT0  (HAL_ROOT_NPTDKEYS - 4)
+#define TSKEXT1  (HAL_ROOT_NPTDKEYS - 3)
+#define TSKEXT2  (HAL_ROOT_NPTDKEYS - 2)
+#define TSKEXT3  (HAL_ROOT_NPTDKEYS - 1)
+
+#define HAL_PATCH_RELEASE_NUMBER(a, b, c)  (((a) << 16) | ((b) << 8) | (c))
 
 #if LINUX_VERSION_CODE < KERNEL_VERSION(2,4,32) || (LINUX_VERSION_CODE >= KERNEL_VERSION(2,6,0) && LINUX_VERSION_CODE < KERNEL_VERSION(2,6,13))
 
@@ -127,6 +129,8 @@ do { \
 
 #define hal_tskext  ptd
 
+#define hal_set_linux_task_priority  __adeos_setscheduler_root
+
 #else
 
 #define HAL_VERSION_STRING   IPIPE_VERSION_STRING
@@ -149,7 +153,11 @@ do { \
 #define hal_pipeline        __ipipe_pipeline
 #define hal_domain_struct   ipipe_domain 
 #define hal_root_domain     ipipe_root_domain 
-#define hal_current_domain  ipipe_percpu_domain 
+#if LINUX_VERSION_CODE >= KERNEL_VERSION(2,6,17) && IPIPE_RELEASE_NUMBER >= HAL_PATCH_RELEASE_NUMBER(1,5,1)
+#define hal_current_domain(cpuid)  per_cpu(ipipe_percpu_domain, cpuid) 
+#else
+#define hal_current_domain(cpuid)  (ipipe_percpu_domain[cpuid])
+#endif
 
 #define hal_critical_enter  ipipe_critical_enter
 #define hal_critical_exit   ipipe_critical_exit
@@ -213,7 +221,14 @@ do { \
 #define hal_set_printk_async  ipipe_set_printk_async
 
 #define hal_schedule_back_root(prev) \
-	ipipe_reenter_root(prev, current->policy, current->rt_priority);
+do { \
+	if ((prev)->rtai_tskext(HAL_ROOT_NPTDKEYS - 1)) { \
+		ipipe_reenter_root((prev)->rtai_tskext(HAL_ROOT_NPTDKEYS - 1), (prev)->policy, (prev)->rt_priority); \
+		(prev)->rtai_tskext(HAL_ROOT_NPTDKEYS - 1) = NULL; \
+	} else { \
+		ipipe_reenter_root(prev, (prev)->policy, (prev)->rt_priority); \
+	} \
+} while (0)
 
 #define hal_processor_id  ipipe_processor_id
 
@@ -231,6 +246,12 @@ do { \
 
 #define hal_tskext  ptd
 
+#define hal_set_linux_task_priority  ipipe_setscheduler_root
+
+#endif
+
+#if defined(IPIPE_ROOT_NPTDKEYS) && TSKEXT0 < 0
+#error *** TSKEXTs WILL CAUSE MEMORY LEAKS, CHECK BOUNDS IN HAL PATCHES ***
 #endif
 
 #endif
